# linux-cloud

./: CloudAgentConstants.cpp  CloudAgentConstants.h  CloudAgentHeartBeatLoop.h  CloudAgentMain.cpp  CloudCmdTaskLoop.cpp  CloudCmdTaskLoop.h  CloudConfigurationUpdater.cpp  CloudConfigurationUpdater.h  CloudDatabaseHandler.cpp  CloudDatabaseHandler.h  CloudDynamicFlexTaskLoop.cpp  CloudDynamicFlexTaskLoop.h  CloudKafkaMessageHandler.cpp  CloudKafkaMessageHandler.h  CloudScheduleTaskLoop.cpp  CloudScheduleTaskLoop.h  CloudSyncTaskLoop.h  CloudXMLParseHandler.cpp  CloudXMLParseHandler.h  IniFileConfigurationNew.cpp  IniFileConfigurationNew.h  Makefile.am  OmcInfoUpdater.cpp  OmcInfoUpdater.h  README.md  ZnodeTest.cpp  ZnodeTest.h  ailk.KafkaMsg.proto  build.sh  configure.ac  kpi_day_statistic.sql  kpi_hour_statistic.sql  node_day_statistic.sql  node_hour_statistic.sql  test.cpp
